[TensorExt] Mirror a tensor_ext version of flow.tensor.bitcast (#21277)
In preparation for adding bitcasts to dispatches, this pass mirrors
flow.tensor.bitcast in the tensor_ext dialect so that we don't have to
put flow ops inside dispatches. The two op definitions are the same,
however they differ in terms of canonicalizers/folders and the set of
transformations they support (e.g. the tensor_ext variant will be
bufferizable).

A follow up change will move all producing uses of flow.tensor.bitcast
to use the tensor_ext variant instead.

Moves a shared util to `compiler/Utils/ShapeUtils.cpp`, however along
the way it turned out the encoding dialect had been added as a
dependency to `compiler/Utils`, which meant TensorExt couldn't depend on
Utils without introducing a circular dependency. This patch also fixes
that dependency issue by splitting out ElementPackingUtils into its own
lib.

--- a/compiler/src/iree/compiler/Dialect/Encoding/Utils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Encoding/Utils/CMakeLists.txt
@@ -14,16 +14,20 @@ iree_cc_library(
   NAME
     Utils
   HDRS
+    "ElementPackingUtils.h"
     "Utils.h"
   SRCS
+    "ElementPackingUtils.cpp"
     "Utils.cpp"
   DEPS
     LLVMSupport
+    MLIRArithDialect
     MLIRIR
     MLIRInferTypeOpInterface
     MLIRLinalgDialect
     MLIRLinalgUtils
     iree::compiler::Dialect::Encoding::IR
+    iree::compiler::Dialect::Util::IR
   PUBLIC
 )
 
