--- a/compiler/src/iree/compiler/Dialect/Flow/Conversion/TensorToFlow/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Flow/Conversion/TensorToFlow/CMakeLists.txt
@@ -33,6 +33,7 @@ iree_cc_library(
     MLIRTensorDialect
     MLIRTensorUtils
     iree::compiler::Dialect::Flow::IR
+    iree::compiler::Dialect::TensorExt::IR
   PUBLIC
 )
 
