Move all producing uses of flow.bitcast to tensor_ext (#21279)
All places where we currently construct flow.bitcast happen before
dispatch formation and instead should use tensor_ext.bitcast.

--- a/compiler/plugins/input/Torch/InputConversion/CMakeLists.txt
+++ b/compiler/plugins/input/Torch/InputConversion/CMakeLists.txt
@@ -58,5 +58,6 @@ iree_cc_library(
     iree::compiler::Dialect::HAL::IR
     iree::compiler::Dialect::LinalgExt::IR
     iree::compiler::Dialect::Stream::IR
+    iree::compiler::Dialect::TensorExt::IR
   PUBLIC
 )
