[LinalgExt] Add decomposition for vector map_scatter (#21116)
Adds a decomposition pass for `iree_linalg_ext.map_scatter` with a
vector input and a memref output. The decomposition lowers the op into a
series of vector ops to compute the index vector, and a vector.scatter
op. This transformation completes the lowering of a vectorized
map_scatter op.

The map_scatter op does not implement the `AggregatedOpInterface`,
because the interface uses an `OpBuilder` to decompose operations, but
the decomposition for map_scatter needs a `RewriterBase`, so it does not
work with the current interface.

---------

Signed-off-by: Max Dawkins <max.dawkins@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/LinalgExt/Transforms/test/BUILD.bazel
@@ -21,6 +21,7 @@ iree_lit_test_suite(
             "convert_to_loops.mlir",
             "convert_to_online_attention.mlir",
             "decompose_im2col.mlir",
+            "decompose_map_scatter.mlir",
             "decompose_winograd.mlir",
             "distribution.mlir",
             "fold_unit_dims.mlir",
