[DispatchCreation] Add pass to cast away unsupported element types (#21339)
Tensor element types unsupported by the HAL need to be casted to bytes
before then. This adds a pass that supports cases where the inner most
dimension of such tensors can be evenly bitcasted to bytes, and causes
an earlier compiler failure in other cases where we know both the HAL
and codegen won't be able to support it.

--- a/compiler/src/iree/compiler/DispatchCreation/CMakeLists.txt
+++ b/compiler/src/iree/compiler/DispatchCreation/CMakeLists.txt
@@ -17,6 +17,7 @@ iree_cc_library(
     "FusionUtils.h"
     "Passes.h"
   SRCS
+    "BitcastUnsupportedElementTypes.cpp"
     "BubbleUpExpandShapes.cpp"
     "CloneProducersIntoDispatchRegions.cpp"
     "CollapseDimensions.cpp"
