--- a/compiler/src/iree/compiler/DispatchCreation/BUILD.bazel
+++ b/compiler/src/iree/compiler/DispatchCreation/BUILD.bazel
@@ -31,6 +31,7 @@ iree_compiler_cc_library(
         "FoldUnitExtentDims.cpp",
         "FormDispatchRegions.cpp",
         "FormScalarDispatches.cpp",
+        "FormSplitReductionDispatches.cpp",
         "FuseEncodingOpsIntoDispatchRegions.cpp",
         "FuseHorizontalContractions.cpp",
         "FuseMultiUseElementwiseProducer.cpp",
