[codegen][gpu] Add the `iree-rocdl-use-buffer-instructions` pass (#21335)
This patch adds the `iree-rocdl-use-buffer-instructions` pass to cover
some buffers not covered by: `iree-rocdl-configure-buffer-instructions`.

In particular this pass will look for `tensor.extact_slices` coming from
a `iree_tensor_ext.dispatch.tensor.load` and if the size is less than
2GB and the offsets are uniform, then the pass adds a
`iree_gpu.buffer_resource_cast` to use raw buffer ops.

This is useful when the main buffer is too big to use raw buffers, but
the slices are small enough to use raw buffers.

Example:
```mlir
func.func @uniform_loop() {
  %0 = hal.interface.binding.subspan layout(#pipeline_layout) binding(0) alignment(64)
      : !iree_tensor_ext.dispatch.tensor<readonly:tensor<32x?xi64>>
  %1 = hal.interface.constant.load layout(#pipeline_layout) ordinal(0) : index
  %2 = util.assume.int %1<umin = 1, umax = 8589934592> : index
  %3 = iree_tensor_ext.dispatch.tensor.load %0, offsets = [0, 0], sizes = [32, %2], strides = [1, 1] : !iree_tensor_ext.dispatch.tensor<readonly:tensor<32x?xi64>>{%1} -> tensor<32x?xi64>
  %4 = hal.interface.constant.load layout(#pipeline_layout) ordinal(1) : index
  %5 = util.assume.int %1<umin = 1, umax = 8192> : index
  %c0 = arith.constant 0 : index
  %c1 = arith.constant 1 : index
  scf.for %iv = %c0 to %5 step %c1 {
    %6 = tensor.extract_slice %3[%iv, 0] [32, %5] [1, 1] : tensor<32x?xi64> to tensor<32x?xi64>
    scf.yield
  }
  return
}
// Result of applying the pass.
func.func @uniform_loop() {
  %0 = hal.interface.binding.subspan layout(#pipeline_layout) binding(0) alignment(64) : !iree_tensor_ext.dispatch.tensor<readonly:tensor<32x?xi64>>
  %1 = hal.interface.constant.load layout(#pipeline_layout) ordinal(0) : index
  %2 = util.assume.int %1<umin = 1, umax = 8589934592> : index
  %3 = iree_tensor_ext.dispatch.tensor.load %0, offsets = [0, 0], sizes = [32, %2], strides = [1, 1] : !iree_tensor_ext.dispatch.tensor<readonly:tensor<32x?xi64>>{%

--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/BUILD.bazel
@@ -118,6 +118,7 @@ iree_compiler_cc_library(
         "ROCDLLowerExecutableTarget.cpp",
         "ROCDLPrefetching.cpp",
         "ROCDLSelectLoweringStrategy.cpp",
+        "ROCDLUseBufferInstructions.cpp",
         "TestLLVMGPUQueryMMAPass.cpp",
         "Verifiers.cpp",
     ],
