--- a/compiler/src/iree/compiler/Codegen/LLVMGPU/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/LLVMGPU/CMakeLists.txt
@@ -98,6 +98,7 @@ iree_cc_library(
     "ROCDLLowerExecutableTarget.cpp"
     "ROCDLPrefetching.cpp"
     "ROCDLSelectLoweringStrategy.cpp"
+    "ROCDLUseBufferInstructions.cpp"
     "TestLLVMGPUQueryMMAPass.cpp"
     "Verifiers.cpp"
   DEPS
