Add e2e test for split reduction using tiling. (#21374)
This adds end to end tests for split-reduction tiling. To facilitate
testing add a new attribute that can be used to specify the reduction
tile sizes for the operations on the input MLIR. This is then picked up
to drive splitting reductions into two dispatches, one for the partial
reduce and one for the final combination. A pipeline test to verify that
this attribute works as intended is added as well.

Delete the command line option that was used to turn on split-reduction
using tiling.

---------

Signed-off-by: MaheshRavishankar <mravisha@amd.com>

--- a/tests/e2e/regression/BUILD.bazel
+++ b/tests/e2e/regression/BUILD.bazel
@@ -78,6 +78,7 @@ iree_check_single_backend_test_suite(
         "layernorm.mlir",
         "lowering_config.mlir",
         "pack_pad_transpose_1x9_into_2x4x8x4_issue_12546.mlir",
+        "split_reduction_using_tiling.mlir",
     ] + BACKEND_TESTS,
     compiler_flags = ["--iree-llvmcpu-target-cpu=generic"],
     driver = "local-task",
@@ -135,6 +136,25 @@ iree_check_single_backend_test_suite(
         "requires-gpu-nvidia",
     ],
     target_backend = "cuda",
+)
+
+iree_check_single_backend_test_suite(
+    name = "check_regression_hip",
+    srcs = [
+        "split_reduction_using_tiling.mlir",
+    ],
+    compiler_flags = [
+        "--iree-opt-level=O3",
+    ],
+    driver = "hip",
+    tags = [
+        "noasan",
+        "nomsan",
+        "notsan",
+        "noubsan",
+        "requires-gpu-amd",
+    ],
+    target_backend = "rocm",
 )
 
 iree_check_single_backend_test_suite(
