Implementing AMDGPU logical/physical devices and skeleton queues. (#21251)
A single logical device in the HAL may have multiple virtual queues
backed by multiple physical devices. Queues may either be host-side (CPU
issues all queue operations from a worker thread) or device-side (GPU
issues all queue operations from scheduler dispatches). Logical and
physical device setup, device library loading, pool management, and
routing from the top-level HAL API are the same regardless of queue
implementation and it's even possible to support multiple queue types
per logical device (if ganging an APU and a dGPU, for example). To start
the host-side queue will be implemented in future changes and the
device-side queue is present only as a placeholder for later
implementation.

There are some things I'm not too pleased with (like all the block pools
floating around) but I'll be cleaning things up as I implement the
queues and try to reduce how much state is shared between the physical
device and its queue implementations.

--- a/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
@@ -26,6 +26,8 @@ iree_runtime_cc_library(
         "channel.h",
         "command_buffer.c",
         "command_buffer.h",
+        "device_queue.c",
+        "device_queue.h",
         "driver.c",
         "driver.h",
         "event.c",
@@ -34,14 +36,14 @@ iree_runtime_cc_library(
         "executable.h",
         "executable_cache.c",
         "executable_cache.h",
+        "host_queue.c",
+        "host_queue.h",
         "host_service.c",
         "host_service.h",
         "logical_device.c",
         "logical_device.h",
         "physical_device.c",
         "physical_device.h",
-        # "queue.c",
-        # "queue.h",
         "semaphore.c",
         "semaphore.h",
         "semaphore_pool.c",
@@ -50,6 +52,8 @@ iree_runtime_cc_library(
         "system.h",
         # "trace_buffer.c",
         # "trace_buffer.h",
+        "virtual_queue.c",
+        "virtual_queue.h",
     ],
     hdrs = [
         "api.h",
@@ -84,10 +88,12 @@ iree_runtime_cc_library(
         "buffer_pool.h",
         "channel.h",
         "command_buffer.h",
+        "device_queue.h",
         "driver.h",
         "event.h",
         "executable.h",
         "executable_cache.h",
+        "host_queue.h",
         "host_service.h",
         "logical_device.h",
         "physical_device.h",
@@ -161,6 +167,25 @@ iree_runtime_cc_test(
         ":headers",
         "//runtime/src/iree/base",
         "//runtime/src/iree/hal/drivers/amdgpu/device:headers",
+        "//runtime/src/iree/hal/drivers/amdgpu/util",
+        "//runtime/src/iree/hal/drivers/amdgpu/util:libhsa",
+        "//runtime/src/iree/hal/drivers/amdgpu/util:topology",
+        "//runtime/src/iree/testing:gtest",
+        "//runtime/src/iree/testing:gtest_main",
+    ],
+)
+
+iree_runtime_cc_test(
+    name = "system_test",
+    srcs = ["system_test.cc"],
+    tags = [
+        "driver=amdgpu",
+        "nodocker",
+    ],
+    deps = [
+        ":amdgpu",
+        ":headers",
+        "//runtime/src/iree/base",
         "//runtime/src/iree/hal/drivers/amdgpu/util",
         "//runtime/src/iree/hal/drivers/amdgpu/util:libhsa",
         "//runtime/src/iree/hal/drivers/amdgpu/util:topology",
