--- a/runtime/src/iree/hal/drivers/amdgpu/CMakeLists.txt
+++ b/runtime/src/iree/hal/drivers/amdgpu/CMakeLists.txt
@@ -26,6 +26,8 @@ iree_cc_library(
     "channel.h"
     "command_buffer.c"
     "command_buffer.h"
+    "device_queue.c"
+    "device_queue.h"
     "driver.c"
     "driver.h"
     "event.c"
@@ -34,6 +36,8 @@ iree_cc_library(
     "executable.h"
     "executable_cache.c"
     "executable_cache.h"
+    "host_queue.c"
+    "host_queue.h"
     "host_service.c"
     "host_service.h"
     "logical_device.c"
@@ -46,6 +50,8 @@ iree_cc_library(
     "semaphore_pool.h"
     "system.c"
     "system.h"
+    "virtual_queue.c"
+    "virtual_queue.h"
   DEPS
     iree::base
     iree::base::internal
@@ -75,10 +81,12 @@ iree_cc_library(
     "buffer_pool.h"
     "channel.h"
     "command_buffer.h"
+    "device_queue.h"
     "driver.h"
     "event.h"
     "executable.h"
     "executable_cache.h"
+    "host_queue.h"
     "host_service.h"
     "logical_device.h"
     "physical_device.h"
@@ -147,6 +155,25 @@ iree_cc_test(
     ::headers
     iree::base
     iree::hal::drivers::amdgpu::device::headers
+    iree::hal::drivers::amdgpu::util
+    iree::hal::drivers::amdgpu::util::libhsa
+    iree::hal::drivers::amdgpu::util::topology
+    iree::testing::gtest
+    iree::testing::gtest_main
+  LABELS
+    "driver=amdgpu"
+    "nodocker"
+)
+
+iree_cc_test(
+  NAME
+    system_test
+  SRCS
+    "system_test.cc"
+  DEPS
+    ::amdgpu
+    ::headers
+    iree::base
     iree::hal::drivers::amdgpu::util
     iree::hal::drivers::amdgpu::util::libhsa
     iree::hal::drivers::amdgpu::util::topology
