--- a/runtime/src/iree/hal/drivers/amdgpu/util/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/amdgpu/util/BUILD.bazel
@@ -101,6 +101,7 @@ iree_runtime_cc_library(
         "bitmap.h",
         "block_pool.h",
         "device_library.h",
+        "error_callback.h",
         "info.h",
         "kfd.h",
         "vmem.h",
