--- a/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
+++ b/runtime/src/iree/hal/drivers/amdgpu/BUILD.bazel
@@ -62,6 +62,8 @@ iree_runtime_cc_library(
         "//runtime/src/iree/base",
         "//runtime/src/iree/base/internal",
         "//runtime/src/iree/base/internal:arena",
+        "//runtime/src/iree/base/internal:synchronization",
+        "//runtime/src/iree/base/internal:threading",
         "//runtime/src/iree/base/internal/flatcc:parsing",
         "//runtime/src/iree/hal",
         "//runtime/src/iree/hal/drivers/amdgpu/device:binaries",
@@ -119,6 +121,7 @@ iree_runtime_cc_library(
 iree_runtime_cc_test(
     name = "buffer_pool_test",
     srcs = ["buffer_pool_test.cc"],
+    group = "iree-hal-drivers-amdgpu-tests",
     tags = [
         "driver=amdgpu",
         "nodocker",
@@ -139,6 +142,7 @@ iree_runtime_cc_test(
 iree_runtime_cc_test(
     name = "host_service_test",
     srcs = ["host_service_test.cc"],
+    group = "iree-hal-drivers-amdgpu-tests",
     tags = [
         "driver=amdgpu",
         "nodocker",
@@ -147,6 +151,8 @@ iree_runtime_cc_test(
         ":amdgpu",
         ":headers",
         "//runtime/src/iree/base",
+        "//runtime/src/iree/hal",
+        "//runtime/src/iree/hal/drivers/amdgpu/device:headers",
         "//runtime/src/iree/hal/drivers/amdgpu/util",
         "//runtime/src/iree/hal/drivers/amdgpu/util:libhsa",
         "//runtime/src/iree/hal/drivers/amdgpu/util:topology",
@@ -158,6 +164,7 @@ iree_runtime_cc_test(
 iree_runtime_cc_test(
     name = "semaphore_pool_test",
     srcs = ["semaphore_pool_test.cc"],
+    group = "iree-hal-drivers-amdgpu-tests",
     tags = [
         "driver=amdgpu",
         "nodocker",
@@ -178,6 +185,7 @@ iree_runtime_cc_test(
 iree_runtime_cc_test(
     name = "system_test",
     srcs = ["system_test.cc"],
+    group = "iree-hal-drivers-amdgpu-tests",
     tags = [
         "driver=amdgpu",
         "nodocker",
