Add linalg.softmax e2e tests. (#21396)
There are several times that the failure can only be reproduced with a
model, while the root cause is a softmax dispatch. Adding an e2e softmax
test to save some time for such case.

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/tests/e2e/linalg/BUILD.bazel
+++ b/tests/e2e/linalg/BUILD.bazel
@@ -27,6 +27,7 @@ LLVM_SRCS = enforce_glob(
         "pack.mlir",
         "pack_dynamic_inner_tiles.mlir",
         "pack_i8.mlir",
+        "softmax.mlir",
         "subbyte_to_fp.mlir",
         "unpack.mlir",
     ],
@@ -58,6 +59,7 @@ VMVX_SRCS = enforce_glob(
         "pack.mlir",
         "pack_dynamic_inner_tiles.mlir",
         "pack_i8.mlir",
+        "softmax.mlir",
         "unpack.mlir",
     ],
     include = ["*.mlir"],
@@ -103,6 +105,7 @@ VULKAN_SRCS = enforce_glob(
     [
         "conv2d.mlir",
         "narrow_n_matmuls.mlir",
+        "softmax.mlir",
         "subbyte_to_fp.mlir",
     ],
     include = ["*.mlir"],
@@ -160,6 +163,7 @@ CUDA_SRCS = enforce_glob(
         "large_linalg_matmul.mlir",
         "narrow_n_matmuls.mlir",
         "pack_i8.mlir",
+        "softmax.mlir",
         "unpack.mlir",
     ],
     include = ["*.mlir"],
@@ -193,6 +197,7 @@ ROCM_SRCS = enforce_glob(
     [
         "argmax.mlir",
         "pack_i8.mlir",
+        "softmax.mlir",
         "unpack.mlir",
     ],
     include = ["*.mlir"],
