[Dispatch Creation] Fuse bit-truncate ops with producers (#21346)
Ensures bit-truncate ops get fused with their producers during dispatch
creation by preventing elementwise fusion with consumers that would
cause them to no longer fuse with their producer.
---------

Signed-off-by: MaheshRavishankar <mravisha@amd.com>
Signed-off-by: Ian Wood <ianwood@u.northwestern.edu>
Co-authored-by: MaheshRavishankar <mravisha@amd.com>

--- a/compiler/src/iree/compiler/DispatchCreation/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/DispatchCreation/test/BUILD.bazel
@@ -46,6 +46,7 @@ iree_lit_test_suite(
             "pad_fusion_with_producer.mlir",
             "pipeline_tests.mlir",
             "propagate_encodings.mlir",
+            "pipeline_tests_aggressive.mlir",
             "set_encoding.mlir",
             "set_encoding_padding.mlir",
             "set_encoding_pipeline.mlir",
