--- a/runtime/src/iree/hal/local/BUILD.bazel
+++ b/runtime/src/iree/hal/local/BUILD.bazel
@@ -41,11 +41,11 @@ cc_binary_benchmark(
         ":executable_library",
         ":local",
         "//runtime/src/iree/base",
-        "//runtime/src/iree/base/internal:file_io",
         "//runtime/src/iree/base/internal:flags",
         "//runtime/src/iree/hal",
         "//runtime/src/iree/hal/local/loaders/registration",
         "//runtime/src/iree/hal/local/plugins/registration",
+        "//runtime/src/iree/io:file_handle",
         "//runtime/src/iree/testing:benchmark",
     ],
 )
