--- a/runtime/src/iree/hal/local/CMakeLists.txt
+++ b/runtime/src/iree/hal/local/CMakeLists.txt
@@ -45,11 +45,11 @@ iree_cc_binary_benchmark(
     ::executable_library
     ::local
     iree::base
-    iree::base::internal::file_io
     iree::base::internal::flags
     iree::hal
     iree::hal::local::loaders::registration
     iree::hal::local::plugins::registration
+    iree::io::file_handle
     iree::testing::benchmark
   TESTONLY
 )
