--- a/runtime/src/iree/tooling/BUILD.bazel
+++ b/runtime/src/iree/tooling/BUILD.bazel
@@ -76,12 +76,12 @@ iree_runtime_cc_library(
         ":device_util",
         ":parameter_util",
         "//runtime/src/iree/base",
-        "//runtime/src/iree/base/internal:file_io",
         "//runtime/src/iree/base/internal:flags",
         "//runtime/src/iree/base/internal:path",
         "//runtime/src/iree/hal",
         "//runtime/src/iree/hal/local/loaders/registration",
         "//runtime/src/iree/hal/local/plugins/registration",
+        "//runtime/src/iree/io:file_handle",
         "//runtime/src/iree/modules/hal",
         "//runtime/src/iree/modules/hal/inline",
         "//runtime/src/iree/modules/hal/loader",
@@ -193,9 +193,9 @@ iree_runtime_cc_library(
     hdrs = ["parameter_util.h"],
     deps = [
         "//runtime/src/iree/base",
-        "//runtime/src/iree/base/internal:file_io",
         "//runtime/src/iree/base/internal:flags",
         "//runtime/src/iree/hal",
+        "//runtime/src/iree/io:file_handle",
         "//runtime/src/iree/io:parameter_index",
         "//runtime/src/iree/io:parameter_index_provider",
         "//runtime/src/iree/io:parameter_provider",
