--- a/tools/CMakeLists.txt
+++ b/tools/CMakeLists.txt
@@ -72,6 +72,7 @@ iree_cc_binary(
     iree::base
     iree::base::internal::flags
     iree::hal
+    iree::io::file_handle
     iree::modules::hal::types
     iree::testing::benchmark
     iree::tooling::device_util
@@ -107,7 +108,6 @@ iree_cc_binary(
     "iree-check-module-main.cc"
   DEPS
     iree::base
-    iree::base::internal::file_io
     iree::base::internal::flags
     iree::hal
     iree::modules::check
@@ -127,9 +127,9 @@ iree_cc_binary(
     "iree-convert-parameters-main.c"
   DEPS
     iree::base
-    iree::base::internal::file_io
     iree::base::internal::flags
     iree::hal
+    iree::io::file_handle
     iree::io::formats::irpa
     iree::io::parameter_index
     iree::io::scope_map
@@ -158,9 +158,9 @@ iree_cc_binary(
     "iree-create-parameters-main.c"
   DEPS
     iree::base
-    iree::base::internal::file_io
     iree::base::internal::flags
     iree::hal
+    iree::io::file_handle
     iree::io::formats::irpa
     iree::io::parameter_index
     iree::io::scope_map
@@ -177,8 +177,8 @@ iree_cc_binary(
   DEPS
     flatcc::runtime
     iree::base
-    iree::base::internal::file_io
     iree::base::internal::flatcc::parsing
+    iree::io::file_handle
     iree::schemas::instruments
     iree::schemas::instruments::dispatch_def_c_fbs
   COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
@@ -193,10 +193,10 @@ iree_cc_binary(
   DEPS
     flatcc::runtime
     iree::base
-    iree::base::internal::file_io
     iree::base::internal::flags
     iree::base::internal::flatcc::debugging
     iree::base::internal::flatcc::parsing
+    iree::io::file_handle
     iree::schemas::bytecode_module_def_c_fbs
     iree::vm::bytecode::module
   COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
@@ -210,8 +210,8 @@ iree_cc_binary(
     "iree-dump-parameters-main.c"
   DEPS
     iree::base
-    iree::base::internal::file_io
     iree::base::internal::flags
+    iree::io::file_handle
     iree::io::parameter_index
     iree::io::scope_map
     iree::tooling::parameter_util
@@ -231,8 +231,8 @@ iree_cc_binary(
     "iree-fatelf.c"
   DEPS
     iree::base
-    iree::base::internal::file_io
     iree::base::internal::path
+    iree::io::file_handle
     iree::hal::local::elf::elf_module
   COVERAGE ${IREE_ENABLE_RUNTIME_COVERAGE}
   INSTALL_COMPONENT IREETools-Runtime
