--- a/runtime/src/iree/base/testing/BUILD.bazel
+++ b/runtime/src/iree/base/testing/BUILD.bazel
@@ -40,7 +40,7 @@ iree_runtime_cc_test(
         ":dynamic_library_test_library",
         "//runtime/src/iree/base",
         "//runtime/src/iree/base/internal:dynamic_library",
-        "//runtime/src/iree/base/internal:file_io",
+        "//runtime/src/iree/io:file_handle",
         "//runtime/src/iree/testing:gtest",
         "//runtime/src/iree/testing:gtest_main",
     ],
