--- a/runtime/src/iree/runtime/BUILD.bazel
+++ b/runtime/src/iree/runtime/BUILD.bazel
@@ -46,9 +46,9 @@ iree_runtime_cc_library(
     deps = [
         "//runtime/src/iree/base",
         "//runtime/src/iree/base/internal",
-        "//runtime/src/iree/base/internal:file_io",
         "//runtime/src/iree/hal",
         "//runtime/src/iree/hal/drivers",
+        "//runtime/src/iree/io:file_handle",
         "//runtime/src/iree/modules/hal",
         "//runtime/src/iree/vm",
         "//runtime/src/iree/vm/bytecode:module",
