[TensorExt] Add inliner interface (#21437)
Interestingly the dialect already depended on InliningUtils but there
was no interface added for it.

--- a/compiler/src/iree/compiler/Dialect/TensorExt/IR/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/TensorExt/IR/test/CMakeLists.txt
@@ -16,6 +16,7 @@ iree_lit_test_suite(
   SRCS
     "dispatch_tensor_folding.mlir"
     "dispatch_workload_ordinal_folding.mlir"
+    "inline.mlir"
     "roundtrip.mlir"
     "tensor_ext_folding.mlir"
   TOOLS
