--- a/compiler/src/iree/compiler/Dialect/TensorExt/IR/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/TensorExt/IR/test/BUILD.bazel
@@ -18,6 +18,7 @@ iree_lit_test_suite(
         [
             "dispatch_tensor_folding.mlir",
             "dispatch_workload_ordinal_folding.mlir",
+            "inline.mlir",
             "roundtrip.mlir",
             "tensor_ext_folding.mlir",
         ],
