[Codegen] Add canonicalizer with IREE codegen specific patterns (#21456)
Adds a new canonicalizer pass called `IREECodegenCanonicalizerPass`,
which can have additional IREE specific patterns. The only extra pattern
so far is an extension of the memref.subview folder for full subviews,
using the Util::ShapeAwareOpInterface to look at dynamic sizes. The
pattern is IREE specific because the interface exists in IREE.

The new pass is currently only used in post-bufferization passes, since
this is where the dynamic subview folder is useful, but it could be used
in place of other canonicalizers in the future as well.

fixes https://github.com/iree-org/iree/issues/21417

---------

Signed-off-by: Max Dawkins <max.dawkins@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -133,6 +133,7 @@ iree_compiler_cc_library(
         "GenericVectorization.cpp",
         "HoistStaticallyBoundAllocations.cpp",
         "HoistUnrolledVectorExtractInsertSlice.cpp",
+        "IREECodegenCanonicalizer.cpp",
         "IREEComprehensiveBufferizePass.cpp",
         "IREEExpandStridedMetadata.cpp",
         "IREEInjectAssumeAlignment.cpp",
