[Flow] Add support for moving operations with dependencies into dispatch regions (#21399)
Fix for the dominance issue in Llama with data tiling.

Signed-off-by: Jorn Tuyls <jorn.tuyls@gmail.com>

--- a/compiler/src/iree/compiler/Utils/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Utils/CMakeLists.txt
@@ -27,6 +27,7 @@ iree_cc_library(
     "PassUtils.h"
     "PatternUtils.h"
     "Permutation.h"
+    "RegionOpUtils.h"
     "ShapeUtils.h"
     "StringUtils.h"
     "ToolUtils.h"
@@ -39,6 +40,7 @@ iree_cc_library(
     "ModuleUtils.cpp"
     "OptionUtils.cpp"
     "PassUtils.cpp"
+    "RegionOpUtils.cpp"
     "ShapeUtils.cpp"
     "StringUtils.cpp"
     "ToolUtils.cpp"
@@ -47,6 +49,7 @@ iree_cc_library(
     LLVMPasses
     LLVMSupport
     MLIRAffineDialect
+    MLIRAnalysis
     MLIRArithDialect
     MLIRFuncDialect
     MLIRFunctionInterfaces
