--- a/compiler/src/iree/compiler/Utils/BUILD.bazel
+++ b/compiler/src/iree/compiler/Utils/BUILD.bazel
@@ -24,6 +24,7 @@ iree_compiler_cc_library(
         "ModuleUtils.cpp",
         "OptionUtils.cpp",
         "PassUtils.cpp",
+        "RegionOpUtils.cpp",
         "ShapeUtils.cpp",
         "StringUtils.cpp",
         "ToolUtils.cpp",
@@ -43,6 +44,7 @@ iree_compiler_cc_library(
         "PassUtils.h",
         "PatternUtils.h",
         "Permutation.h",
+        "RegionOpUtils.h",
         "ShapeUtils.h",
         "StringUtils.h",
         "ToolUtils.h",
@@ -56,6 +58,7 @@ iree_compiler_cc_library(
         "@llvm-project//llvm:Passes",
         "@llvm-project//llvm:Support",
         "@llvm-project//mlir:AffineDialect",
+        "@llvm-project//mlir:Analysis",
         "@llvm-project//mlir:ArithDialect",
         "@llvm-project//mlir:DialectUtils",
         "@llvm-project//mlir:FuncDialect",
