Integrate LLVM at 9e09c4d (#21495)
Integrate
https://github.com/llvm/llvm-project/commit/9e09c4dd52a093501fe361890bd2924daf79e50e

The changes are mainly to adapt to
https://github.com/llvm/llvm-project/commit/b2d4963ee925b014f39231e0faac746630711162

Cherry-picking
https://github.com/llvm/llvm-project/commit/207b9a78f0c7db9ecbb90ead93b3772492a8a9c1
to fix the Bazel buid.

---------

Signed-off-by: Benoit Jacob <jacob.benoit.1@gmail.com>

--- a/compiler/src/iree/compiler/Dialect/Flow/Transforms/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Dialect/Flow/Transforms/CMakeLists.txt
@@ -33,8 +33,8 @@ iree_cc_library(
     "Canonicalize.cpp"
     "CaptureDynamicDims.cpp"
     "CleanupTensorShapes.cpp"
-    "ConvertMeshToFlow.cpp"
     "ConvertRegionToWorkgroups.cpp"
+    "ConvertShardToFlow.cpp"
     "ConvertToFlow.cpp"
     "DeduplicateExecutables.cpp"
     "DumpDispatchGraph.cpp"
@@ -72,11 +72,11 @@ iree_cc_library(
     MLIRMathDialect
     MLIRMemRefDialect
     MLIRMemRefTransforms
-    MLIRMeshDialect
     MLIRParser
     MLIRPass
     MLIRSCFDialect
     MLIRSCFToControlFlow
+    MLIRShardDialect
     MLIRSupport
     MLIRTensorDialect
     MLIRTensorTransforms
@@ -87,7 +87,7 @@ iree_cc_library(
     MLIRTransforms
     iree::compiler::Codegen::Dialect::Codegen::IR::IREECodegenDialect
     iree::compiler::Dialect::Encoding::IR
-    iree::compiler::Dialect::Flow::Conversion::MeshToFlow
+    iree::compiler::Dialect::Flow::Conversion::ShardToFlow
     iree::compiler::Dialect::Flow::Conversion::TensorToFlow
     iree::compiler::Dialect::Flow::IR
     iree::compiler::Dialect::HAL::IR
