--- a/compiler/src/iree/compiler/Dialect/Flow/Conversion/ShardToFlow/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Flow/Conversion/ShardToFlow/BUILD.bazel
@@ -13,7 +13,7 @@ package(
 )
 
 iree_compiler_cc_library(
-    name = "MeshToFlow",
+    name = "ShardToFlow",
     srcs = [
         "Patterns.cpp",
     ],
@@ -31,8 +31,8 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:IR",
         "@llvm-project//mlir:LinalgDialect",
         "@llvm-project//mlir:LinalgUtils",
-        "@llvm-project//mlir:MeshDialect",
-        "@llvm-project//mlir:MeshTransforms",
+        "@llvm-project//mlir:ShardDialect",
+        "@llvm-project//mlir:ShardTransforms",
         "@llvm-project//mlir:Support",
         "@llvm-project//mlir:TensorDialect",
         "@llvm-project//mlir:TransformUtils",
