--- a/compiler/src/iree/compiler/Dialect/Flow/Transforms/BUILD.bazel
+++ b/compiler/src/iree/compiler/Dialect/Flow/Transforms/BUILD.bazel
@@ -40,8 +40,8 @@ iree_compiler_cc_library(
         "Canonicalize.cpp",
         "CaptureDynamicDims.cpp",
         "CleanupTensorShapes.cpp",
-        "ConvertMeshToFlow.cpp",
         "ConvertRegionToWorkgroups.cpp",
+        "ConvertShardToFlow.cpp",
         "ConvertToFlow.cpp",
         "DeduplicateExecutables.cpp",
         "DumpDispatchGraph.cpp",
@@ -70,7 +70,7 @@ iree_compiler_cc_library(
         ":PassesIncGen",
         "//compiler/src/iree/compiler/Codegen/Dialect/Codegen/IR:IREECodegenDialect",
         "//compiler/src/iree/compiler/Dialect/Encoding/IR",
-        "//compiler/src/iree/compiler/Dialect/Flow/Conversion/MeshToFlow",
+        "//compiler/src/iree/compiler/Dialect/Flow/Conversion/ShardToFlow",
         "//compiler/src/iree/compiler/Dialect/Flow/Conversion/TensorToFlow",
         "//compiler/src/iree/compiler/Dialect/Flow/IR",
         "//compiler/src/iree/compiler/Dialect/HAL/IR",
@@ -104,11 +104,11 @@ iree_compiler_cc_library(
         "@llvm-project//mlir:MathDialect",
         "@llvm-project//mlir:MemRefDialect",
         "@llvm-project//mlir:MemRefTransforms",
-        "@llvm-project//mlir:MeshDialect",
         "@llvm-project//mlir:Parser",
         "@llvm-project//mlir:Pass",
         "@llvm-project//mlir:SCFDialect",
         "@llvm-project//mlir:SCFToControlFlow",
+        "@llvm-project//mlir:ShardDialect",
         "@llvm-project//mlir:Support",
         "@llvm-project//mlir:TensorDialect",
         "@llvm-project//mlir:TensorTransforms",
