[CPU] Skip distribution passes if the tile sizes are known as zeros. (#21508)
The revision adds an option to `LLVMCPUPipelineOptions` that describes
if distribution is disabled or not.

It may be okay to run the passes, but it causes maintenance burdens.
E.g., https://github.com/iree-org/iree/issues/21504

It is better to not run the passes at all, if we already know that
distribution is disabled. It also saves compilation time as fewer passes
are run.

Fixes https://github.com/iree-org/iree/issues/21504

Signed-off-by: hanhanW <hanhan0912@gmail.com>

--- a/compiler/src/iree/compiler/Codegen/LLVMCPU/test/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/LLVMCPU/test/BUILD.bazel
@@ -37,6 +37,7 @@ iree_lit_test_suite(
             "illegal_configuration.mlir",
             "peel.mlir",
             "pipeline_arm_sme_streaming_mode_tests.mlir",
+            "pipeline_disable_distribution_tests.mlir",
             "pipeline_pack_unpack_tests.mlir",
             "pipeline_pad_conv_tests.mlir",
             "pipeline_pad_tests.mlir",
