[Codegen] Add infra for lowering MLIR ukernels based on descriptors (#21428)
All credit to: @qedawkins 

Towards: https://github.com/iree-org/iree/issues/21407

Adds three passes for lowering to ukernels:
- LowerBitcodeUKernelsPass: Lowers ops with ukernel descriptors to
iree_codegen.ukernel.generic
- LowerMemrefUKernelsPass: Lowers ops with ukernel descriptors and
memref operands based on the implementation from a ukernel provider
implementing UKernelProviderInterface.
- LowerTensorUKernelsPass: Lowers ops with ukernel descriptors and
tensor operands based on the implementation from a ukernel provider
implementing UKernelProviderInterface.

Signed-off-by: Jorn Tuyls <jorn.tuyls@gmail.com>
Co-authored-by: Quinn Dawkins <quinn@nod-labs.com>

--- a/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
+++ b/compiler/src/iree/compiler/Codegen/Common/BUILD.bazel
@@ -141,6 +141,7 @@ iree_compiler_cc_library(
         "InstrumentMemoryAccesses.cpp",
         "LinkTuningSpecsPass.cpp",
         "LowerExecutableUsingTransformDialect.cpp",
+        "LowerUKernelDescriptors.cpp",
         "LowerUKernelsToCalls.cpp",
         "LoweringConfigInterpreter.cpp",
         "MaterializeEncoding.cpp",
