--- a/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/CMakeLists.txt
@@ -133,6 +133,7 @@ iree_cc_library(
     "InstrumentMemoryAccesses.cpp"
     "LinkTuningSpecsPass.cpp"
     "LowerExecutableUsingTransformDialect.cpp"
+    "LowerUKernelDescriptors.cpp"
     "LowerUKernelsToCalls.cpp"
     "LoweringConfigInterpreter.cpp"
     "MaterializeEncoding.cpp"
