--- a/compiler/src/iree/compiler/Codegen/Common/test/CMakeLists.txt
+++ b/compiler/src/iree/compiler/Codegen/Common/test/CMakeLists.txt
@@ -65,6 +65,9 @@ iree_lit_test_suite(
     "iree_inject_assume_alignment.mlir"
     "iree_loop_invariant_code_motion.mlir"
     "link_tuning_specs.mlir"
+    "lower_ukernel_bitcode_descriptor.mlir"
+    "lower_ukernel_memref_descriptor.mlir"
+    "lower_ukernel_tensor_descriptor.mlir"
     "lower_ukernel_to_calls.mlir"
     "lowering_config_interpreter.mlir"
     "materialize_encoding_aarch64.mlir"
